// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-steps"
      >
        <div
          class="el-step"
          data-testid="step-0"
        >
          1
        </div>
        <div
          class="el-step"
          data-testid="step-1"
        >
          2
        </div>
        <div
          class="el-step"
          data-testid="step-2"
        >
          3
        </div>
        <div
          class="el-step"
          data-testid="step-3"
        >
          4
        </div>
        <div
          class="el-step"
          data-testid="step-4"
        >
          5
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-steps"
    >
      <div
        class="el-step"
        data-testid="step-0"
      >
        1
      </div>
      <div
        class="el-step"
        data-testid="step-1"
      >
        2
      </div>
      <div
        class="el-step"
        data-testid="step-2"
      >
        3
      </div>
      <div
        class="el-step"
        data-testid="step-3"
      >
        4
      </div>
      <div
        class="el-step"
        data-testid="step-4"
      >
        5
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Steps should match a snapshot when selectedStep is different 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-steps"
      >
        <div
          class="el-is-used el-step"
          data-testid="step-0"
        >
          1
        </div>
        <div
          class="el-is-active el-step"
          data-testid="step-1"
        >
          2
        </div>
        <div
          class="el-step"
          data-testid="step-2"
        >
          3
        </div>
        <div
          class="el-step"
          data-testid="step-3"
        >
          4
        </div>
        <div
          class="el-step"
          data-testid="step-4"
        >
          5
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-steps"
    >
      <div
        class="el-is-used el-step"
        data-testid="step-0"
      >
        1
      </div>
      <div
        class="el-is-active el-step"
        data-testid="step-1"
      >
        2
      </div>
      <div
        class="el-step"
        data-testid="step-2"
      >
        3
      </div>
      <div
        class="el-step"
        data-testid="step-3"
      >
        4
      </div>
      <div
        class="el-step"
        data-testid="step-4"
      >
        5
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`StepsVertical should match a snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-steps-vertical"
      >
        <div
          class="el-step-vertical"
        >
          <div
            class="el-step-vertical-item"
          >
            <div
              class="el-step"
              data-testid="step-0"
            >
              1
            </div>
          </div>
          <div
            class="el-step-vertical-content"
          >
            Lorem, ipsum dolor
          </div>
        </div>
        <div
          class="el-step-vertical"
        >
          <div
            class="el-step-vertical-item"
          >
            <div
              class="el-step"
              data-testid="step-1"
            >
              2
            </div>
          </div>
          <div
            class="el-step-vertical-content"
          >
            Lorem, ipsum dolor
          </div>
        </div>
        <div
          class="el-step-vertical"
        >
          <div
            class="el-step-vertical-item"
          >
            <div
              class="el-step"
              data-testid="step-2"
            >
              3
            </div>
          </div>
          <div
            class="el-step-vertical-content"
          >
            Lorem, ipsum dolor
          </div>
        </div>
        <div
          class="el-step-vertical"
        >
          <div
            class="el-step-vertical-item"
          >
            <div
              class="el-step"
              data-testid="step-3"
            >
              4
            </div>
          </div>
          <div
            class="el-step-vertical-content"
          >
            Lorem, ipsum dolor
          </div>
        </div>
        <div
          class="el-step-vertical"
        >
          <div
            class="el-step-vertical-item"
          >
            <div
              class="el-is-active el-step"
              data-testid="step-4"
            >
              5
            </div>
          </div>
          <div
            class="el-step-vertical-content"
          >
            Lorem, ipsum dolor
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-steps-vertical"
    >
      <div
        class="el-step-vertical"
      >
        <div
          class="el-step-vertical-item"
        >
          <div
            class="el-step"
            data-testid="step-0"
          >
            1
          </div>
        </div>
        <div
          class="el-step-vertical-content"
        >
          Lorem, ipsum dolor
        </div>
      </div>
      <div
        class="el-step-vertical"
      >
        <div
          class="el-step-vertical-item"
        >
          <div
            class="el-step"
            data-testid="step-1"
          >
            2
          </div>
        </div>
        <div
          class="el-step-vertical-content"
        >
          Lorem, ipsum dolor
        </div>
      </div>
      <div
        class="el-step-vertical"
      >
        <div
          class="el-step-vertical-item"
        >
          <div
            class="el-step"
            data-testid="step-2"
          >
            3
          </div>
        </div>
        <div
          class="el-step-vertical-content"
        >
          Lorem, ipsum dolor
        </div>
      </div>
      <div
        class="el-step-vertical"
      >
        <div
          class="el-step-vertical-item"
        >
          <div
            class="el-step"
            data-testid="step-3"
          >
            4
          </div>
        </div>
        <div
          class="el-step-vertical-content"
        >
          Lorem, ipsum dolor
        </div>
      </div>
      <div
        class="el-step-vertical"
      >
        <div
          class="el-step-vertical-item"
        >
          <div
            class="el-is-active el-step"
            data-testid="step-4"
          >
            5
          </div>
        </div>
        <div
          class="el-step-vertical-content"
        >
          Lorem, ipsum dolor
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`StepsVertical should match a snapshot when selectedStep is different 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-steps-vertical"
      >
        <div
          class="el-step-vertical"
        >
          <div
            class="el-step-vertical-item"
          >
            <div
              class="el-step"
              data-testid="step-0"
            >
              1
            </div>
          </div>
          <div
            class="el-step-vertical-content"
          >
            Lorem, ipsum dolor
          </div>
        </div>
        <div
          class="el-step-vertical"
        >
          <div
            class="el-step-vertical-item"
          >
            <div
              class="el-is-active el-step"
              data-testid="step-1"
            >
              2
            </div>
          </div>
          <div
            class="el-step-vertical-content"
          >
            Lorem, ipsum dolor
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-steps-vertical"
    >
      <div
        class="el-step-vertical"
      >
        <div
          class="el-step-vertical-item"
        >
          <div
            class="el-step"
            data-testid="step-0"
          >
            1
          </div>
        </div>
        <div
          class="el-step-vertical-content"
        >
          Lorem, ipsum dolor
        </div>
      </div>
      <div
        class="el-step-vertical"
      >
        <div
          class="el-step-vertical-item"
        >
          <div
            class="el-is-active el-step"
            data-testid="step-1"
          >
            2
          </div>
        </div>
        <div
          class="el-step-vertical-content"
        >
          Lorem, ipsum dolor
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
